--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,7 +1,7 @@
 <div class="qa-nav-main">
   <ul class="qa-nav-main-list">
     <li class="qa-nav-main-item" style="">
-      <a href="http://sites.question2answer.org/" class="qa-nav-main-link">Sites</a>
+      <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
     </li>
     <li class="qa-nav-main-item" style="">
       <a href="install-basic.html" class="qa-nav-main-link">Install</a>
@@ -16,7 +16,7 @@
       <a href="services.html" class="qa-nav-main-link">Services</a>
     </li>
     <li class="qa-nav-main-item" style="float:right;">
-      <a href="http://qa.question2answer.org/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
+      <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
     </li>
   </ul>
   <div class="qa-nav-main-clear">
