Set pretty permalinks and update links

--- a/_includes/nav-developers.html
+++ b/_includes/nav-developers.html
@@ -1,33 +1,32 @@
 <div class="qa-nav-sub">
   <ul class="qa-nav-sub-list">
     <li class="qa-nav-sub-item">
-      <a href="developers-translate.html" class="qa-nav-sub-link">Translate</a>
+      <a href="/developers-translate/" class="qa-nav-sub-link">Translate</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-themes.html" class="qa-nav-sub-link">Themes</a>
+      <a href="/developers-themes/" class="qa-nav-sub-link">Themes</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-external.html" class="qa-nav-sub-link">External</a>
+      <a href="/developers-external/" class="qa-nav-sub-link">External</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-functions.html" class="qa-nav-sub-link">Functions</a>
+      <a href="/developers-functions/" class="qa-nav-sub-link">Functions</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-plugins.html" class="qa-nav-sub-link">Plugins</a>
+      <a href="/developers-plugins/" class="qa-nav-sub-link">Plugins</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-plugins-tutorial.html" class="qa-nav-sub-link">Plugin Tutorial</a>
+      <a href="/developers-plugins-tutorial/" class="qa-nav-sub-link">Plugin Tutorial</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-modules.html" class="qa-nav-sub-link">Modules</a>
+      <a href="/developers-modules/" class="qa-nav-sub-link">Modules</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-layers.html" class="qa-nav-sub-link">Layers</a>
+      <a href="/developers-layers/" class="qa-nav-sub-link">Layers</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="developers-overrides.html" class="qa-nav-sub-link">Overrides</a>
+      <a href="/developers-overrides/" class="qa-nav-sub-link">Overrides</a>
     </li>
   </ul>
-  <div class="qa-nav-sub-clear">
-  </div>
+  <div class="qa-nav-main-clear"></div>
 </div>
