--- a/_includes/nav-install.html
+++ b/_includes/nav-install.html
@@ -1,21 +1,20 @@
 <div class="qa-nav-sub">
   <ul class="qa-nav-sub-list">
     <li class="qa-nav-sub-item">
-      <a href="install-basic.html" class="qa-nav-sub-link">Basic Install</a>
+      <a href="/install-basic/" class="qa-nav-sub-link">Basic Install</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="install-wordpress.html" class="qa-nav-sub-link qa-nav-sub-selected">WordPress</a>
+      <a href="/install-wordpress/" class="qa-nav-sub-link qa-nav-sub-selected">WordPress</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="install-single-sign-on.html" class="qa-nav-sub-link">Single Sign-On</a>
+      <a href="/install-single-sign-on/" class="qa-nav-sub-link">Single Sign-On</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="install-optimize.html" class="qa-nav-sub-link">Optimization</a>
+      <a href="/install-optimize/" class="qa-nav-sub-link">Optimization</a>
     </li>
     <li class="qa-nav-sub-item">
-      <a href="install-security.html" class="qa-nav-sub-link">Security</a>
+      <a href="/install-security/" class="qa-nav-sub-link">Security</a>
     </li>
   </ul>
-  <div class="qa-nav-sub-clear">
-  </div>
+  <div class="qa-nav-main-clear"></div>
 </div>
