--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -4,21 +4,20 @@
       <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
     </li>
     <li class="qa-nav-main-item" style="">
-      <a href="install-basic.html" class="qa-nav-main-link">Install</a>
+      <a href="/install-basic/" class="qa-nav-main-link">Install</a>
     </li>
     <li class="qa-nav-main-item" style="">
-      <a href="addons.html" class="qa-nav-main-link">Add-Ons</a>
+      <a href="/addons/" class="qa-nav-main-link">Add-Ons</a>
     </li>
     <li class="qa-nav-main-item" style="">
-      <a href="developers.html" class="qa-nav-main-link">Developers</a>
+      <a href="/developers/" class="qa-nav-main-link">Developers</a>
     </li>
     <li class="qa-nav-main-item" style="">
-      <a href="services.html" class="qa-nav-main-link">Services</a>
+      <a href="/services/" class="qa-nav-main-link">Services</a>
     </li>
     <li class="qa-nav-main-item" style="float:right;">
       <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
     </li>
   </ul>
-  <div class="qa-nav-main-clear">
-  </div>
+  <div class="qa-nav-main-clear"></div>
 </div>
