Generate sub menus from config

--- a/_includes/nav-developers.html
+++ b/_includes/nav-developers.html
@@ -1,32 +1,14 @@
 <div class="qa-nav-sub">
   <ul class="qa-nav-sub-list">
-    <li class="qa-nav-sub-item">
-      <a href="/developers-translate/" class="qa-nav-sub-link">Translate</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-themes/" class="qa-nav-sub-link">Themes</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-external/" class="qa-nav-sub-link">External</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-functions/" class="qa-nav-sub-link">Functions</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-plugins/" class="qa-nav-sub-link">Plugins</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-plugins-tutorial/" class="qa-nav-sub-link">Plugin Tutorial</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-modules/" class="qa-nav-sub-link">Modules</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-layers/" class="qa-nav-sub-link">Layers</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/developers-overrides/" class="qa-nav-sub-link">Overrides</a>
-    </li>
+    {% for navpage in site.nav.developers %}
+      <li class="qa-nav-sub-item">
+        {% if page.url == navpage.path %}
+          <a href="{{ navpage.path }}" class="qa-nav-sub-link qa-nav-sub-selected">{{ navpage.name }}</a>
+        {% else %}
+          <a href="{{ navpage.path }}" class="qa-nav-sub-link">{{ navpage.name }}</a>
+        {% endif %}
+      </li>
+    {% endfor %}
   </ul>
   <div class="qa-nav-main-clear"></div>
 </div>
