--- a/_includes/nav-install.html
+++ b/_includes/nav-install.html
@@ -1,20 +1,14 @@
 <div class="qa-nav-sub">
   <ul class="qa-nav-sub-list">
-    <li class="qa-nav-sub-item">
-      <a href="/install-basic/" class="qa-nav-sub-link">Basic Install</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/install-wordpress/" class="qa-nav-sub-link qa-nav-sub-selected">WordPress</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/install-single-sign-on/" class="qa-nav-sub-link">Single Sign-On</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/install-optimize/" class="qa-nav-sub-link">Optimization</a>
-    </li>
-    <li class="qa-nav-sub-item">
-      <a href="/install-security/" class="qa-nav-sub-link">Security</a>
-    </li>
+    {% for navpage in site.nav.install %}
+      <li class="qa-nav-sub-item">
+        {% if page.url == navpage.path %}
+          <a href="{{ navpage.path }}" class="qa-nav-sub-link qa-nav-sub-selected">{{ navpage.name }}</a>
+        {% else %}
+          <a href="{{ navpage.path }}" class="qa-nav-sub-link">{{ navpage.name }}</a>
+        {% endif %}
+      </li>
+    {% endfor %}
   </ul>
   <div class="qa-nav-main-clear"></div>
 </div>
