--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,17 +1,15 @@
 <div class="qa-nav-main">
   <ul class="qa-nav-main-list">
-    <li class="qa-nav-main-item" style="">
-      <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
-    </li>
-
-    {% for page in site.nav.main %}
-      <li class="qa-nav-main-item" style="">
-        <a href="/{{ page.path }}/" class="qa-nav-main-link">{{ page.name }}</a>
+    {% for navpage in site.nav.main %}
+      <li class="qa-nav-main-item">
+        <a href="{{ navpage.path }}" class="qa-nav-main-link">{{ navpage.name }}</a>
       </li>
     {% endfor %}
-
     <li class="qa-nav-main-item" style="float:right;">
       <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
+    </li>
+    <li class="qa-nav-main-item" style="float:right;">
+      <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
     </li>
   </ul>
   <div class="qa-nav-main-clear"></div>
