--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,13 @@
 		<div class="qa-nav-footer">
 			<ul class="qa-nav-footer-list">
 				<li class="qa-nav-footer-item">
-					<a href="feedback.html" class="qa-nav-footer-link">Send feedback</a>
+					<a href="http://www.question2answer.org/feedback.php" class="qa-nav-footer-link">Send feedback</a>
 				</li>
 				<li class="qa-nav-footer-item">
 					<a href="https://github.com/q2a/question2answer/releases" class="qa-nav-footer-link">Version history</a>
 				</li>
 				<li class="qa-nav-footer-item">
-					<a href="license.html" class="qa-nav-footer-link">License details</a>
+					<a href="http://www.question2answer.org/license.php" class="qa-nav-footer-link">License details</a>
 				</li>
 				<li class="qa-nav-footer-item">
 					<a href="http://demo.question2answer.org/" class="qa-nav-footer-link">Demo sandbox</a>
@@ -19,9 +19,9 @@
 			</div>
 		</div>
 		<div class="qa-attribution">
-			Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a> and <a href="https://github.com/q2a/question2answer/graphs/contributors">contributors</a>.
+			Created by <a href="http://www.gidgreen.com/">Gideon Greenspan</a>
+			and <a href="https://github.com/q2a/question2answer/graphs/contributors">contributors</a>.
 		</div>
-		<div class="qa-footer-clear">
-		</div>
+		<div class="qa-footer-clear"></div>
 	</div>
 </div>
