--- a/css/main.css
+++ b/css/main.css
@@ -2141,7 +2141,6 @@ h1 {text-align:center; margin:.5em 0 1em 0; font-size:26px;}
 h2 {margin-left:-10px; padding-left:10px;}
 h3 {font-size:14px; margin-top:1.5em;}
 h4 {font-size:12px; margin-top:1em;}
-code,pre {color:#070;}
 p,ul {margin-top:12px; margin-bottom:0;}
 
 .steps li {margin-bottom:0.8em;}
@@ -2155,5 +2154,74 @@ p,ul {margin-top:12px; margin-bottom:0;}
 h2 {font-size:16px; padding:0; margin:1.5em 0 0 0;}
 h3 {font-size:13px; padding:0; margin:1.5em 0 0 0;}
 h4 {font-size:12px; padding:0; padding-left:1em; margin:1.5em 0 0 0;}
-
 */
+
+
+
+/* Syntax highlighting */
+
+code.highlighter-rouge {
+	color: #070;
+}
+
+.highlight .hll { background-color: #ffffcc }
+.highlight .c { color: #808080 } /* Comment */
+.highlight .err { color: #f00000; background-color: #f0a0a0 } /* Error */
+.highlight .k { color: #008000; font-weight: bold } /* Keyword */
+.highlight .o { color: #303030 } /* Operator */
+.highlight .cm { color: #808080 } /* Comment.Multiline */
+.highlight .cp { color: #507090 } /* Comment.Preproc */
+.highlight .c1 { color: #808080 } /* Comment.Single */
+.highlight .cs { color: #cc0000; font-weight: bold } /* Comment.Special */
+.highlight .gd { color: #a00000 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #ff0000 } /* Generic.Error */
+.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #00a000 } /* Generic.Inserted */
+.highlight .go { color: #808080 } /* Generic.Output */
+.highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.highlight .gt { color: #0040d0 } /* Generic.Traceback */
+.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
+.highlight .kp { color: #003080; font-weight: bold } /* Keyword.Pseudo */
+.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #303090; font-weight: bold } /* Keyword.Type */
+.highlight .m { color: #6000e0; font-weight: bold } /* Literal.Number */
+.highlight .s { color: #d04020 } /* Literal.String */
+.highlight .na { color: #0060b0 } /* Name.Attribute */
+.highlight .nb { color: #007020 } /* Name.Builtin */
+.highlight .nc { color: #b00060; font-weight: bold } /* Name.Class */
+.highlight .no { color: #003060; font-weight: bold } /* Name.Constant */
+.highlight .nd { color: #505050; font-weight: bold } /* Name.Decorator */
+.highlight .ni { color: #800000; font-weight: bold } /* Name.Entity */
+.highlight .ne { color: #f00000; font-weight: bold } /* Name.Exception */
+.highlight .nf { color: #0060b0; font-weight: bold } /* Name.Function */
+.highlight .nl { color: #907000; font-weight: bold } /* Name.Label */
+.highlight .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
+.highlight .nt { color: #007000 } /* Name.Tag */
+.highlight .nv { color: #906030 } /* Name.Variable */
+.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mf { color: #6000e0; font-weight: bold } /* Literal.Number.Float */
+.highlight .mh { color: #005080; font-weight: bold } /* Literal.Number.Hex */
+.highlight .mi { color: #0000d0; font-weight: bold } /* Literal.Number.Integer */
+.highlight .mo { color: #4000e0; font-weight: bold } /* Literal.Number.Oct */
+.highlight .sb { color: #d04020 } /* Literal.String.Backtick */
+.highlight .sc { color: #0040d0 } /* Literal.String.Char */
+.highlight .sd { color: #d04020 } /* Literal.String.Doc */
+.highlight .s2 { color: #d04020 } /* Literal.String.Double */
+.highlight .se { color: #606060; font-weight: bold; } /* Literal.String.Escape */
+.highlight .sh { color: #d04020 } /* Literal.String.Heredoc */
+.highlight .si { color: #d04020 } /* Literal.String.Interpol */
+.highlight .sx { color: #d02000; color: #d04020 } /* Literal.String.Other */
+.highlight .sr { color: #000000; background-color: #fff0ff } /* Literal.String.Regex */
+.highlight .s1 { color: #d04020 } /* Literal.String.Single */
+.highlight .ss { color: #a06000 } /* Literal.String.Symbol */
+.highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #306090 } /* Name.Variable.Class */
+.highlight .vg { color: #d07000; font-weight: bold } /* Name.Variable.Global */
+.highlight .vi { color: #3030b0 } /* Name.Variable.Instance */
+.highlight .il { color: #0000d0; font-weight: bold } /* Literal.Number.Integer.Long */
