Change feedback link text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="qa-nav-footer">
 			<ul class="qa-nav-footer-list">
 				<li class="qa-nav-footer-item">
-					<a href="http://www.question2answer.org/feedback.php" class="qa-nav-footer-link">Send feedback</a>
+					<a href="http://www.question2answer.org/feedback.php" class="qa-nav-footer-link">Contact devs</a>
 				</li>
 				<li class="qa-nav-footer-item">
 					<a href="https://github.com/q2a/question2answer/releases" class="qa-nav-footer-link">Version history</a>
