--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@
 	font-style:italic;
 	line-height:20px;
 }
+
 body {
 	background:#efefef;
 	text-align:center;
@@ -87,6 +88,7 @@ body,td,input,textarea {
 	font:14px/1.5 Helvetica, Arial, Sens-serif;
 	color:#333;
 }
+
 a:link, a:visited {
 	text-decoration:none;
 	color:#006699;
@@ -95,6 +97,7 @@ a:hover, a:active{
 	color:#0099cc;
 	text-decoration:underline;
 }
+
 button::-moz-focus-inner {
     border:0;
     padding:0;
@@ -2150,19 +2153,20 @@ p,ul {margin-top:12px; margin-bottom:0;}
 .parameters td {margin:0; padding:3px 8px;}
 .parameters .titles td {background-color:#cfd1c4; font-weight:bold; margin:0; padding:3px 8px;}
 
-/*
-h2 {font-size:16px; padding:0; margin:1.5em 0 0 0;}
-h3 {font-size:13px; padding:0; margin:1.5em 0 0 0;}
-h4 {font-size:12px; padding:0; padding-left:1em; margin:1.5em 0 0 0;}
-*/
-
+code {
+    color: #393;
+    font-size: 13px;
+}
+pre {
+	margin-left: 2em;
+	line-height: 1.3;
+}
+pre code {
+	color: inherit;
+}
 
 
 /* Syntax highlighting */
-
-code.highlighter-rouge {
-	color: #070;
-}
 
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #808080 } /* Comment */
