--- a/_layouts/page-code.html
+++ b/_layouts/page-code.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% include nav-main.html %}
-{% include nav-developers.html %}
+{% include nav-code.html %}
 <div class="qa-main">
   <div class="onecolumn">
     {{ content }}
