--- a/_includes/nav-code.html
+++ b/_includes/nav-code.html
@@ -1,6 +1,6 @@
 <div class="qa-nav-sub">
   <ul class="qa-nav-sub-list">
-    {% for navpage in site.nav.plugins %}
+    {% for navpage in site.nav.code %}
       <li class="qa-nav-sub-item">
         {% if page.url == navpage.path %}
           <a href="{{ navpage.path }}" class="qa-nav-sub-link qa-nav-sub-selected">{{ navpage.name }}</a>
