Remove duplication in menu

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include nav-main.html %}
+{% include nav-sub.html %}
 <div class="qa-main">
   <div class="onecolumn">
     {{ content }}
