--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -5,10 +5,10 @@
         <a href="{{ navpage.path }}" class="qa-nav-main-link">{{ navpage.name }}</a>
       </li>
     {% endfor %}
-    <li class="qa-nav-main-item" style="float:right;">
+    <li class="qa-nav-main-item" style="float:right">
       <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
     </li>
-    <li class="qa-nav-main-item" style="float:right;">
+    <li class="qa-nav-main-item" style="float:right">
       <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
     </li>
   </ul>
