--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -9,7 +9,7 @@
       <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
     </li>
     <li class="qa-nav-main-item" style="float:right">
-      <a href="http://question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
+      <a href="http://www.question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
     </li>
   </ul>
   <div class="qa-nav-main-clear"></div>
