--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,6 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}">
 
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.css?v=2">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 </head>
