--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -6,10 +6,10 @@
       </li>
     {% endfor %}
     <li class="qa-nav-main-item" style="float:right">
-      <a href="http://www.question2answer.org/qa/" class="qa-nav-main-link">Question2Answer Q&amp;A</a>
+      <a href="https://docs.question2answer.org/community/" class="qa-nav-main-link">Community</a>
     </li>
     <li class="qa-nav-main-item" style="float:right">
-      <a href="http://www.question2answer.org/sites.php" class="qa-nav-main-link">Sites</a>
+      <a href="https://docs.question2answer.org/sites/" class="qa-nav-main-link">Sites</a>
     </li>
   </ul>
   <div class="qa-nav-main-clear"></div>
