--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -115,7 +115,7 @@ h5 {
 }
 .top-nav > a {
 	padding: 0.5rem 0.8rem;
-	border-radius: 4px;
+	border-radius: 0.25rem;
 	color: #fff;
 	/* font-size: 0.9rem; */
 	font-weight: bold;
@@ -135,7 +135,19 @@ h5 {
 	margin: 12rem auto 0;
 	max-width: 1280px;
 }
-
+.docs-container {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	grid-gap: 1rem;
+}
+.page-content {
+	padding: 1.5rem 2rem;
+	border: 1px solid #dadce0;
+	border-radius: 0.5rem;
+}
+.page-sidebar {
+	padding: 1.5rem 1rem;
+}
 
 
 
@@ -146,7 +158,7 @@ h5 {
 .showcase-cols {
 	display: flex;
 	max-width: 1080px;
-	margin: 0 auto 2rem;
+	margin: 2rem auto;
 }
 
 .showcase-list {
