--- a/_includes/2020-nav-sub.html
+++ b/_includes/2020-nav-sub.html
@@ -1,11 +1,15 @@
 
-{% for navpage in site.nav.main %}
-	<h4>{{ navpage.name }}</h4>
-	{% if navpage.sub %}
-		<ul>
-			{% for subnavpage in site.nav[navpage.sub] %}
-				<li><a href="{{ subnavpage.path }}">{{ subnavpage.name }}</a></li>
-			{% endfor %}
-		</ul>
-	{% endif %}
-{% endfor %}
+<div class="page-sidebar-toggle">Menu</div>
+
+<nav class="page-sidebar-content">
+	{% for navpage in site.nav.main %}
+		<h4 class="docs-nav-title">{{ navpage.name }}</h4>
+		{% if navpage.sub %}
+			<ul class="docs-nav">
+				{% for subnavpage in site.nav[navpage.sub] %}
+					<li class="docs-nav-item"><a href="{{ subnavpage.path }}">{{ subnavpage.name }}</a></li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+	{% endfor %}
+</nav>
