--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: default2020
+layout: default
 ---
 
 <p class="home-intro"><strong>Question2Answer</strong> (Q2A) is a popular open source Q&A platform for PHP/MySQL, currently running on <a href="https://www.question2answer.org/sites.php">24,158 sites in 40 languages</a>.</p>
@@ -14,14 +14,14 @@ layout: default2020
 				People with questions get the answers they need. The community is enriched by commenting,
 				voting, notifications, points and rankings.</p>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="forum" title="What is a Question &amp; Answer site?" answer=answerText %}
+		{% include card-showcase.html icon="forum" title="What is a Question &amp; Answer site?" answer=answerText %}
 
 		{% capture answerText %}
 			<p>Your members will enjoy the interaction that Q&amp;A enables,
 				and will visit your site more regularly. In addition, many web searches are questions,
 				so Q&amp;A content will attract search engine traffic.</p>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="people" title="Why offer Q&amp;A on my site?" answer=answerText %}
+		{% include card-showcase.html icon="people" title="Why offer Q&amp;A on my site?" answer=answerText %}
 
 		{% capture answerText %}
 			<p><a href="question2answer-latest.zip"><b>Download Question2Answer</b></a>, latest version
@@ -30,7 +30,7 @@ layout: default2020
 				Also <a href="https://github.com/q2a/question2answer">on GitHub</a>.</p>
 			<p>Question2Answer is open source, <a href="license.php">licensed under GPL v2+</a>.</p>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="get_app" title="How do I get Q2A?" answer=answerText %}
+		{% include card-showcase.html icon="get_app" title="How do I get Q2A?" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
@@ -41,7 +41,7 @@ layout: default2020
 			if possible as they bring many performance enhancements and each major release of Q2A
 			typically drops support for an older version.</p>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="dns" title="What does Q2A need?" answer=answerText %}
+		{% include card-showcase.html icon="dns" title="What does Q2A need?" answer=answerText %}
 
 		{% capture answerText %}
 			<p>Contribute <a href="https://github.com/q2a/question2answer">via Github</a>,
@@ -49,7 +49,7 @@ layout: default2020
 				<a href="https://docs.question2answer.org/pages/documentation/plugins/plugin-tutorial">plugin</a> or
 				<a href="https://docs.question2answer.org/pages/translate">translation</a>.</p>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="translate" title="How can I help?" answer=answerText %}
+		{% include card-showcase.html icon="translate" title="How can I help?" answer=answerText %}
 
 	</div>
 
@@ -64,7 +64,7 @@ layout: default2020
 				<li>SEO features such as <a href="http://sitemaps.org/">XML Sitemap</a> and neat URLs.</li>
 			</ul>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="settings_input_component" title="Easy to set up" answer=answerText %}
+		{% include card-showcase.html icon="settings_input_component" title="Easy to set up" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
@@ -73,7 +73,7 @@ layout: default2020
 				<li>Beat spam with captchas, moderation and/or flagging.</li>
 			</ul>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="policy" title="Fast and secure" answer=answerText %}
+		{% include card-showcase.html icon="policy" title="Fast and secure" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
@@ -84,7 +84,7 @@ layout: default2020
 				<li>RSS, email notifications and personal news feeds.</li>
 			</ul>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="star" title="Core Q&amp;A features" answer=answerText %}
+		{% include card-showcase.html icon="star" title="Core Q&amp;A features" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
@@ -94,7 +94,7 @@ layout: default2020
 				<li>Log in via Facebook or others (using <a href="https://docs.question2answer.org/pages/addons/plugins/">plugins</a>).</li>
 			</ul>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="face" title="Built-in user account management ..." answer=answerText %}
+		{% include card-showcase.html icon="face" title="Built-in user account management ..." answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
@@ -103,7 +103,7 @@ layout: default2020
 				<li>Deep integration and customization via <a href="https://docs.question2answer.org/pages/documentation/plugins/">plugins</a>.</li>
 			</ul>
 		{% endcapture %}
-		{% include 2020-card-showcase.html icon="assignment_ind" title="... or integrate with existing sites" answer=answerText %}
+		{% include card-showcase.html icon="assignment_ind" title="... or integrate with existing sites" answer=answerText %}
 
 	</div>
 
