--- a/_includes/nav-sub.html
+++ b/_includes/nav-sub.html
@@ -1,16 +1,15 @@
-{% if page.menu %}
-  <div class="qa-nav-sub">
-    <ul class="qa-nav-sub-list">
-      {% for navpage in site.nav[page.menu] %}
-        <li class="qa-nav-sub-item">
-          {% if page.url == navpage.path %}
-            <a href="{{ navpage.path }}" class="qa-nav-sub-link qa-nav-sub-selected">{{ navpage.name }}</a>
-          {% else %}
-            <a href="{{ navpage.path }}" class="qa-nav-sub-link">{{ navpage.name }}</a>
-          {% endif %}
-        </li>
-      {% endfor %}
-    </ul>
-    <div class="qa-nav-main-clear"></div>
-  </div>
-{% endif %}
+
+<div class="page-sidebar-toggle">Menu</div>
+
+<nav class="page-sidebar-content">
+	{% for navpage in site.nav.main %}
+		<h4 class="docs-nav-title">{{ navpage.name }}</h4>
+		{% if navpage.sub %}
+			<ul class="docs-nav">
+				{% for subnavpage in site.nav[navpage.sub] %}
+					<li class="docs-nav-item"><a href="{{ subnavpage.path }}">{{ subnavpage.name }}</a></li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+	{% endfor %}
+</nav>
