--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,35 @@
-<!DOCTYPE html>
-<html>
-  {% include head.html %}
-  <body>
-    <div class="qa-body-wrapper">
-      {% include header.html %}
-      <div class="qa-main-wrapper">
-        {{ content }}
-      </div>
-      {% include footer.html %}
-    </div>
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width initial-scale=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="/css/styles2020.css">
+
+	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title }}{% endif %}</title>
+	<meta name="description" content="{{ site.description }}">
+
+	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+</head>
+
+<body class="page">
+
+	{% include header.html %}
+
+	<main class="page-container">
+		{{ content }}
+	</main>
+
+	{% include footer.html %}
+
+	{% comment %}
     {% include tracking.html %}
-  </body>
+	{% endcomment %}
+
+</body>
 </html>
