--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -112,7 +112,7 @@ code {
 	display: flex;
 	align-items: center;
 }
-.top-nav > a {
+a.main-nav-link {
 	padding: 0.5rem 0.8rem;
 	border-radius: 0.25rem;
 	color: #fff;
@@ -120,7 +120,7 @@ code {
 	font-weight: bold;
 	transition: background-color 0.2s ease-in-out;
 }
-.top-nav > a:hover {
+a.main-nav-link:hover {
 	background-color: rgb(0, 0, 0, 0.05);
 	text-decoration: none;
 }
@@ -190,6 +190,17 @@ code {
 	list-style: none;
 	margin: 0 0 1rem;
 	padding-left: 2rem;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+	margin: 3rem auto 0;
+	padding: 3rem 1rem;
+	border-top: 1px solid #dadce0;
+}
+.footer-nav-link {
+	padding: 0.5rem 0.8rem;
 }
 
 @media (min-width: 800px) {
