--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -56,13 +56,19 @@ code {
 	word-wrap: break-word; /* old syntax (IE/Edge) */
 	overflow-wrap: anywhere;
 }
-
-
-.home-intro {
-	max-width: 800px;
-	margin: 0 auto 2rem;
-	text-align: center;
-	font-size: 1.5rem;
+pre {
+	/* margin-left: 1rem; */
+	padding: 1rem;
+	background-color: #f8f8f4;
+	font-family: "Menlo", "Consolas", "Monaco", "Ubuntu Mono", "Andale Mono", "Bitstream Vera Sans Mono", monospace;
+	font-size: 13px;
+	line-height: 1.3;
+	white-space: pre-wrap;
+}
+pre code {
+	color: inherit;
+	font-family: inherit;
+	tab-size: 4;
 }
 
 
@@ -235,6 +241,13 @@ a.main-nav-link:hover {
 	Homepage
 ================== */
 
+.home-intro {
+	max-width: 800px;
+	margin: 0 auto 2rem;
+	text-align: center;
+	font-size: 1.5rem;
+}
+
 .showcase-cols {
 	display: flex;
 	max-width: 1080px;
@@ -305,3 +318,72 @@ a.main-nav-link:hover {
 	margin-right: 8px;
 	margin-bottom: 3px;
 } */
+
+
+
+/* ==================
+	Docs pages
+================== */
+
+/* Syntax highlighting */
+.highlight .hll { background-color: #ffffcc }
+.highlight .c { color: #808080 } /* Comment */
+.highlight .err { color: #f00000; background-color: #f0a0a0 } /* Error */
+.highlight .k { color: #008000 } /* Keyword */
+.highlight .o { color: #303030 } /* Operator */
+.highlight .cm { color: #808080 } /* Comment.Multiline */
+.highlight .cp { color: #507090 } /* Comment.Preproc */
+.highlight .c1 { color: #808080 } /* Comment.Single */
+.highlight .cs { color: #cc0000 } /* Comment.Special */
+.highlight .gd { color: #a00000 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #ff0000 } /* Generic.Error */
+.highlight .gh { color: #000080 } /* Generic.Heading */
+.highlight .gi { color: #00a000 } /* Generic.Inserted */
+.highlight .go { color: #808080 } /* Generic.Output */
+.highlight .gp { color: #c65d09 } /* Generic.Prompt */
+.highlight .gs { } /* Generic.Strong */
+.highlight .gu { color: #800080 } /* Generic.Subheading */
+.highlight .gt { color: #0040d0 } /* Generic.Traceback */
+.highlight .kc { color: #008000 } /* Keyword.Constant */
+.highlight .kd { color: #008000 } /* Keyword.Declaration */
+.highlight .kn { color: #008000 } /* Keyword.Namespace */
+.highlight .kp { color: #003080 } /* Keyword.Pseudo */
+.highlight .kr { color: #008000 } /* Keyword.Reserved */
+.highlight .kt { color: #303090 } /* Keyword.Type */
+.highlight .m { color: #6000e0 } /* Literal.Number */
+.highlight .s { color: #d04020 } /* Literal.String */
+.highlight .na { color: #0060b0 } /* Name.Attribute */
+.highlight .nb { color: #007020 } /* Name.Builtin */
+.highlight .nc { color: #b00060 } /* Name.Class */
+.highlight .no { color: #003060 } /* Name.Constant */
+.highlight .nd { color: #505050 } /* Name.Decorator */
+.highlight .ni { color: #800000 } /* Name.Entity */
+.highlight .ne { color: #f00000 } /* Name.Exception */
+.highlight .nf { color: #0060b0 } /* Name.Function */
+.highlight .nl { color: #907000 } /* Name.Label */
+.highlight .nn { color: #0e84b5 } /* Name.Namespace */
+.highlight .nt { color: #007000 } /* Name.Tag */
+.highlight .nv { color: #906030 } /* Name.Variable */
+.highlight .ow { color: #000000 } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mf { color: #6000e0 } /* Literal.Number.Float */
+.highlight .mh { color: #005080 } /* Literal.Number.Hex */
+.highlight .mi { color: #0000d0 } /* Literal.Number.Integer */
+.highlight .mo { color: #4000e0 } /* Literal.Number.Oct */
+.highlight .sb { color: #d04020 } /* Literal.String.Backtick */
+.highlight .sc { color: #0040d0 } /* Literal.String.Char */
+.highlight .sd { color: #d04020 } /* Literal.String.Doc */
+.highlight .s2 { color: #d04020 } /* Literal.String.Double */
+.highlight .se { color: #606060; } /* Literal.String.Escape */
+.highlight .sh { color: #d04020 } /* Literal.String.Heredoc */
+.highlight .si { color: #d04020 } /* Literal.String.Interpol */
+.highlight .sx { color: #d02000; color: #d04020 } /* Literal.String.Other */
+.highlight .sr { color: #000000; background-color: #fff0ff } /* Literal.String.Regex */
+.highlight .s1 { color: #d04020 } /* Literal.String.Single */
+.highlight .ss { color: #a06000 } /* Literal.String.Symbol */
+.highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #306090 } /* Name.Variable.Class */
+.highlight .vg { color: #d07000 } /* Name.Variable.Global */
+.highlight .vi { color: #3030b0 } /* Name.Variable.Instance */
+.highlight .il { color: #0000d0 } /* Literal.Number.Integer.Long */
