--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<p class="home-intro"><strong>Question2Answer</strong> (Q2A) is a popular open source Q&A platform for PHP/MySQL, currently running on <a href="https://www.question2answer.org/sites.php">24,158 sites in 40 languages</a>.</p>
+<p class="home-intro"><strong>Question2Answer</strong> (Q2A) is a popular open source Q&A platform for PHP/MySQL, currently running on <a href="https://www.question2answer.org/sites.php">24,500+ sites in 40 languages</a>.</p>
 
 {{ content }}
 
@@ -24,11 +24,10 @@ layout: default
 		{% include card-showcase.html icon="people" title="Why offer Q&amp;A on my site?" answer=answerText %}
 
 		{% capture answerText %}
-			<p><a href="question2answer-latest.zip"><b>Download Question2Answer</b></a>, latest version
-				then read <a href="https://docs.question2answer.org/pages/documentation/themes">how to install</a>.
-				Version 1.8.4 was <a href="versions.php">released</a> on May 7th, 2020.
+			<p><a href="https://www.question2answer.org/question2answer-latest.zip"><b>Download Question2Answer</b></a>, then read <a href="/install/">how to install</a>.
+				Version 1.8.5 was <a href="/install/versions/">released</a> on July 15th, 2020.
 				Also <a href="https://github.com/q2a/question2answer">on GitHub</a>.</p>
-			<p>Question2Answer is open source, <a href="license.php">licensed under GPL v2+</a>.</p>
+			<p>Question2Answer is open source, <a href="https://www.question2answer.org/license.php">licensed under GPL v2+</a>.</p>
 		{% endcapture %}
 		{% include card-showcase.html icon="get_app" title="How do I get Q2A?" answer=answerText %}
 
@@ -45,9 +44,9 @@ layout: default
 
 		{% capture answerText %}
 			<p>Contribute <a href="https://github.com/q2a/question2answer">via Github</a>,
-				create a <a href="https://docs.question2answer.org/pages/documentation/themes/">theme</a>,
-				<a href="https://docs.question2answer.org/pages/documentation/plugins/plugin-tutorial">plugin</a> or
-				<a href="https://docs.question2answer.org/pages/translate">translation</a>.</p>
+				create a <a href="/themes/">theme</a>,
+				<a href="/plugins/">plugin</a> or
+				<a href="/translate/">translation</a>.</p>
 		{% endcapture %}
 		{% include card-showcase.html icon="translate" title="How can I help?" answer=answerText %}
 
@@ -57,19 +56,19 @@ layout: default
 
 		{% capture answerText %}
 			<ul>
-				<li>Q2A takes 5 minutes (or less!) to <a href="https://docs.question2answer.org/pages/documentation/install/">install</a>.</li>
-				<li>Easy styling with <a href="https://docs.question2answer.org/pages/documentation/themes/">CSS themes</a>.</li>
-				<li>Supports <a href="https://docs.question2answer.org/pages/translate/">translation</a> into any language.</li>
+				<li>Q2A takes 5 minutes (or less!) to <a href="/install/">install</a>.</li>
+				<li>Easy styling with <a href="/themes/">CSS themes</a>.</li>
+				<li>Supports <a href="/translate/">translation</a> into any language.</li>
 				<li>Custom sidebar, widgets, pages and links.</li>
-				<li>SEO features such as <a href="http://sitemaps.org/">XML Sitemap</a> and neat URLs.</li>
+				<li>SEO features such as <a href="https://www.sitemaps.org/">XML Sitemap</a> and neat URLs.</li>
 			</ul>
 		{% endcapture %}
 		{% include card-showcase.html icon="settings_input_component" title="Easy to set up" answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
-				<li>PHP/MySQL <a href="https://docs.question2answer.org/documentation/install/optimization/">scalable</a> to millions of users and posts.</li>
-				<li><a href="https://docs.question2answer.org/pages/documentation/install/security/">Safe from</a> XSS, CSRF and SQL injection attacks.</li>
+				<li>PHP/MySQL <a href="/install/optimize/">scalable</a> to millions of users and posts.</li>
+				<li><a href="/install/security/">Safe from</a> XSS, CSRF and SQL injection attacks.</li>
 				<li>Beat spam with captchas, moderation and/or flagging.</li>
 			</ul>
 		{% endcapture %}
@@ -91,16 +90,16 @@ layout: default
 				<li>Create experts, editors, moderators and admins.</li>
 				<li>User avatars (or <a href="https://en.gravatar.com/">Gravatar</a>) and custom fields.</li>
 				<li>Private messages and public wall posts.</li>
-				<li>Log in via Facebook or others (using <a href="https://docs.question2answer.org/pages/addons/plugins/">plugins</a>).</li>
+				<li>Log in via Facebook or others (using <a href="/addons/plugins/">plugins</a>).</li>
 			</ul>
 		{% endcapture %}
 		{% include card-showcase.html icon="face" title="Built-in user account management ..." answer=answerText %}
 
 		{% capture answerText %}
 			<ul>
-				<li>Out-of-the-box <a href="https://docs.question2answer.org/pages/documentation/install/wordpress/">WordPress</a> and Joomla integration.</li>
-				<li>Custom <a href="https://docs.question2answer.org/pages/documentation/install/single-sign-on/">single sign-on</a> support for other sites.</li>
-				<li>Deep integration and customization via <a href="https://docs.question2answer.org/pages/documentation/plugins/">plugins</a>.</li>
+				<li>Out-of-the-box <a href="/install/wordpress/">WordPress</a> and Joomla integration.</li>
+				<li>Custom <a href="/install/single-sign-on/">single sign-on</a> support for other sites.</li>
+				<li>Deep integration and customization via <a href="/plugins/">plugins</a>.</li>
 			</ul>
 		{% endcapture %}
 		{% include card-showcase.html icon="assignment_ind" title="... or integrate with existing sites" answer=answerText %}
