--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,7 @@
 	</main>
 
 	{% include footer.html %}
-
-	{% comment %}
-    {% include tracking.html %}
-	{% endcomment %}
+    {% include analytics.html %}
 
 </body>
 </html>
