--- a/_includes/card-showcase.html
+++ b/_includes/card-showcase.html
@@ -2,6 +2,6 @@
 	<div class="card-showcase-icon"><span class="material-icons">{{ include.icon }}</span></div>
 	<div class="card-showcase-info">
 		<h4 class="card-showcase-title">{{ include.title }}</h4>
-		<p>{{ include.answer }}</p>
+		{{ include.answer }}
 	</div>
 </div>
