--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -17,7 +17,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 	color: #424242;
-	background-color: #ffffff;
+	background-color: #f8f8f8;
 	text-align: left;
 }
 
@@ -35,19 +35,19 @@ a:hover, a:active {
 
 h1 {
 	margin: 0 0 .5rem;
-	font-size: 2rem;
+	font-size: 1.6rem;
 	line-height: 2.5rem;
 }
 
 h2 {
 	margin: 2rem 0 .5rem;
-	font-size: 1.5rem;
+	font-size: 1.4rem;
 	line-height: 2rem;
 }
 
 h3 {
 	margin: 1.5rem 0 .5rem;
-	font-size: 1.25rem;
+	font-size: 1.2rem;
 	line-height: 1.75rem;
 }
 
@@ -55,6 +55,11 @@ h4 {
 	margin: 1.25rem 0 .25rem;
 	font-size: 1rem;
 	line-height: 1.5rem;
+}
+
+ul, ol {
+	margin-left: 0;
+	padding-left: 1.8rem;
 }
 
 code, pre {
@@ -100,8 +105,7 @@ pre code {
 	left: 0;
 	z-index: 20;
 	width: 100%;
-	height: 170px;
-	/* min-height: 200px; */
+	height: 230px;
 	background: transparent url("../images/wave-combo.svg") 20% top/cover no-repeat;
 }
 
@@ -117,6 +121,7 @@ pre code {
 	top: 0;
 	z-index: 25;
 	display: flex;
+	flex-wrap: wrap;
 	width: 100%;
 	padding: 1rem;
 }
@@ -149,18 +154,22 @@ a.main-nav-link:hover {
 }
 
 .page-container {
-	margin: 9rem auto 0;
+	margin: 13rem auto 0;
+	padding: 0 1rem;
 	max-width: 1280px;
 }
 .docs-container {
 	display: grid;
 	grid-template-columns: 6fr;
+	padding: 0 0.5rem;
 }
 
 .page-content {
 	padding: 1.6rem 2rem;
 	border: 1px solid #dadce0;
 	border-radius: 0.5rem;
+	background-color: #fff;
+	box-shadow: 2px 2px 4px rgba(80, 80, 80, 0.1);
 }
 .page-sidebar {
 	padding: 1.5rem 1rem;
@@ -172,6 +181,7 @@ a.main-nav-link:hover {
 	border: 1px solid #dadce0;
 	padding: 0.5rem;
 	border-radius: 0.25rem;
+	background-color: #fff;
 	color: #ff8a59;
 }
 .page-sidebar-toggle:before {
@@ -184,6 +194,7 @@ a.main-nav-link:hover {
 }
 .page-sidebar-content {
 	display: none;
+	column-count: 2;
 }
 .page-sidebar-content.expanded {
 	display: block;
@@ -222,7 +233,32 @@ a.main-nav-link:hover {
 	padding: 0.5rem 0.8rem;
 }
 
+@media (min-width: 540px) {
+	h1 {
+		font-size: 2rem;
+	}
+	h2 {
+		font-size: 1.5rem;
+	}
+	h3 {
+		font-size: 1.25rem;
+	}
+	h4 {
+		font-size: 1rem;
+	}
+	ul, ol {
+		padding-left: 2.2rem;
+	}
+	.page-sidebar-content {
+		column-count: 3;
+	}
+}
+
 @media (min-width: 800px) {
+	.wave-container {
+		height: 170px;
+	}
+
 	.page-container {
 		margin-top: 12rem;
 	}
@@ -232,6 +268,7 @@ a.main-nav-link:hover {
 	}
 	.page-sidebar-content {
 		display: block;
+		column-count: 1;
 	}
 
 	.docs-container {
@@ -263,12 +300,13 @@ a.main-nav-link:hover {
 
 .showcase-cols {
 	display: flex;
+	flex-wrap: wrap;
 	max-width: 1080px;
 	margin: 2rem auto;
 }
 
 .showcase-list {
-	width: 50%;
+	width: 100%;
 	margin: 0 1rem;
 }
 
@@ -279,6 +317,12 @@ a.main-nav-link:hover {
 	flex: 1 0 100%;
 	margin-bottom: 1rem;
 	text-align: left;
+	/* test */
+	padding: 0.8rem 1rem;
+	border: 1px solid #dadce0;
+	border-radius: 0.5rem;
+	background-color: #fff;
+    box-shadow: 2px 2px 4px rgb(80, 80, 80, 0.1);
 }
 
 .card-showcase-icon {
@@ -316,21 +360,16 @@ a.main-nav-link:hover {
 	color: #707070;
 }
 .card-showcase-info ul {
-	margin-left: 1.25rem;
-	padding: 0;
+	padding-left: 1.25rem;
 }
 
-/* Done this way to avoid un-aligned bullet points when text gets aligned center on mobile devices */
-/* .card-showcase-info li:before {
-	content: "";
-	width: 5px;
-	height: 5px;
-	border-radius: 50%;
-	background-color: #3c4043;
-	display: inline-block;
-	margin-right: 8px;
-	margin-bottom: 3px;
-} */
+
+@media (min-width: 800px) {
+	.showcase-list {
+		width: calc(50% - 2rem);
+	}
+
+}
 
 
 
