--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -23,12 +23,10 @@ body {
 
 a, a:visited {
 	text-decoration: none;
-	color: #039BE5;
 	color: #ff6b2b;
 }
 
 a:hover, a:active {
-	color: #039BE5;
 	color: #ff6b2b;
 	text-decoration: underline;
 }
@@ -140,7 +138,6 @@ a.main-nav-link {
 	padding: 0.5rem 0.8rem;
 	border-radius: 0.25rem;
 	color: #fff;
-	/* font-size: 0.9rem; */
 	font-weight: bold;
 	transition: background-color 0.2s ease-in-out;
 }
@@ -224,13 +221,17 @@ a.main-nav-link:hover {
 
 .footer {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
+	gap: 2rem;
 	margin: 3rem auto 0;
 	padding: 3rem 1rem;
 	border-top: 1px solid #dadce0;
 }
-.footer-nav-link {
-	padding: 0.5rem 0.8rem;
+.footer-nav {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2rem;
 }
 
 @media (min-width: 540px) {
@@ -295,19 +296,16 @@ a.main-nav-link:hover {
 	max-width: 800px;
 	margin: 0 auto 2rem;
 	text-align: center;
-	font-size: 1.5rem;
+	font-size: 1.4rem;
 }
 
 .showcase-cols {
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 1080px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 1rem;
+	gap: 1rem;
 	margin: 2rem auto;
-}
-
-.showcase-list {
-	width: 100%;
-	margin: 0 1rem;
+	max-width: 1080px;
 }
 
 .card-showcase {
@@ -315,14 +313,12 @@ a.main-nav-link:hover {
 	align-items: flex-start;
 	flex-direction: row;
 	flex: 1 0 100%;
-	margin-bottom: 1rem;
-	text-align: left;
-	/* test */
 	padding: 0.8rem 1rem;
 	border: 1px solid #dadce0;
 	border-radius: 0.5rem;
 	background-color: #fff;
-    box-shadow: 2px 2px 4px rgb(80, 80, 80, 0.1);
+	box-shadow: 2px 2px 4px rgb(80, 80, 80, 0.1);
+	text-align: left;
 }
 
 .card-showcase-icon {
@@ -364,11 +360,16 @@ a.main-nav-link:hover {
 }
 
 
-@media (min-width: 800px) {
-	.showcase-list {
-		width: calc(50% - 2rem);
+@media (min-width: 540px) {
+	.home-intro {
+		font-size: 1.6rem;
 	}
+}
 
+@media (min-width: 800px) {
+	.showcase-cols {
+		grid-template-columns: 1fr 1fr;
+	}
 }
 
 
