--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -60,6 +60,11 @@ ul, ol {
 	padding-left: 1.8rem;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 code, pre {
 	background-color: #f8f8f4;
 	font-family: "Menlo", "Consolas", "Monaco", "Ubuntu Mono", "Andale Mono", "Bitstream Vera Sans Mono", monospace;
@@ -103,7 +108,7 @@ pre code {
 	left: 0;
 	z-index: 20;
 	width: 100%;
-	height: 230px;
+	height: 170px;
 	background: transparent url("../images/wave-combo.svg") 20% top/cover no-repeat;
 }
 
@@ -120,12 +125,11 @@ pre code {
 	z-index: 25;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 	width: 100%;
 	padding: 1rem;
 }
-.header-logo {
-	margin-right: 2rem;
-}
+
 .logo-img {
 	display: block;
 }
@@ -133,12 +137,14 @@ pre code {
 .top-nav {
 	display: flex;
 	align-items: center;
+	overflow: auto;
 }
 a.main-nav-link {
-	padding: 0.5rem 0.8rem;
+	padding: 0.2rem 0.6rem 0;
 	border-radius: 0.25rem;
 	color: #fff;
 	font-weight: bold;
+	white-space: nowrap;
 	transition: background-color 0.2s ease-in-out;
 }
 a.main-nav-link:hover {
@@ -146,12 +152,8 @@ a.main-nav-link:hover {
 	text-decoration: none;
 }
 
-.secondary-nav {
-	margin-left: auto;
-}
-
 .page-container {
-	margin: 13rem auto 0;
+	margin: 9rem auto 0;
 	padding: 0 1rem;
 	max-width: 1280px;
 }
@@ -256,8 +258,18 @@ a.main-nav-link:hover {
 }
 
 @media (min-width: 800px) {
-	.wave-container {
-		height: 170px;
+	.header {
+		justify-content: flex-start;
+	}
+	.header-logo {
+		margin-right: 2rem;
+	}
+
+	a.main-nav-link {
+		padding: 0.5rem 0.8rem;
+	}
+	.secondary-nav {
+		margin-left: auto;
 	}
 
 	.page-container {
@@ -283,9 +295,13 @@ a.main-nav-link:hover {
 	.page-sidebar {
 		padding: 1.5rem 1rem;
 	}
-
 }
 
+@media (min-width: 1200px) {
+	a.main-nav-link {
+		font-size: 1.125rem;
+	}
+}
 
 
 /* ==================
