--- a/css/styles2020.css
+++ b/css/styles2020.css
@@ -376,6 +376,9 @@ a.main-nav-link-separate {
 	padding-left: 1.25rem;
 }
 
+.text-small {
+	font-size: 0.85rem;
+}
 
 @media (min-width: 540px) {
 	.home-intro {
